# distributions

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml
benches/: poisson_bench.rs
src/: lib.rs  main.rs  normal.rs  uniform.rs
src/num/: mod.rs
src/rng/: mod.rs  pcg32.rs  splitmix64.rs  xoroshiro128.rs  xoshiro256.rs
