[package]
name = "probability-rs"
version = "0.1.1"
edition = "2024"
authors = ["Bruno Tavares <brbtavares@outlook.com>"]
rust-version = "1.85"

# Crates.io metadata
description = "Dependency-free probability distributions; clear APIs, deterministic sampling."
license = "MIT"
readme = "README.md"
repository = "https://github.com/brbtavares/probability-rs"
documentation = "https://docs.rs/probability-rs"
keywords = ["probability", "statistics", "distributions", "random", "rng"]
categories = ["science", "mathematics", "algorithms"]

# Optional: ensure crate is publishable (default is true)
publish = true

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "poisson_bench"
harness = false
